--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Layouts"
         tools:targetApi="31">
         <activity
-            android:name=".bottom_nav.BottomNavigationActivity"
+            android:name=".database.MessengerTabActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +24,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".database.MessageActivity" />
         <activity android:name=".intent.SecondIntentActivity" />
         <activity android:name=".shared_pref.LoginActivity" />
         <activity android:name=".shared_pref.Activity" />
