--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.Layouts"
         tools:targetApi="31">
         <activity
-            android:name=".CalculatorActivity"
+            android:name=".firebase.SignUpActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +27,7 @@
         </activity>
 
         <activity android:name=".database.MessengerTabActivity" />
-        <activity android:name=".firebase.SignUpActivity" />
+        <activity android:name=".firebase.AuthSignUpActivity" />
         <activity android:name=".database.MessageActivity" />
         <activity android:name=".intent.SecondIntentActivity" />
         <activity android:name=".shared_pref.LoginActivity" />
