--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:22.2.0'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
