--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".api.ProfileActivity" />
+        <activity android:name=".api.ApiToDoActivity" />
+        <activity android:name=".api.ApiPostsActivity" />
+        <activity android:name=".api.ApiProfileActivity" />
         <activity android:name=".api.CommentsActivity" />
         <activity android:name=".firebase.ChatActivity" />
         <activity android:name=".firebase.FirebaseMessengerActivity" />
