--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,8 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Layouts"
         tools:targetApi="31">
+
         <activity
-            android:name=".firebase.AuthPhoneActivity"
+            android:configChanges="uiMode"
+            android:name=".locale.LocaleActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,8 +29,21 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name=".notification.NotificationService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_pause" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/teal_700" />
+
         <activity android:name=".firebase.AuthCodeActivity" />
-        <activity android:name=".api.ApiUsersActivity" />
         <activity android:name=".api.ApiToDoActivity" />
         <activity android:name=".api.ApiPostsActivity" />
         <activity android:name=".api.ApiProfileActivity" />
